tests/fixtures/invalid/max_int.py
# Cannot call max() with Int
x = max(1)
